# sm120_gemm

./: .gitignore  CMakeLists.txt  README.md
scripts/: gen_configs.py
src/: bench.cu  bf16_gemm.cuh  common.h  gemm_config.h  kernel_entry.cu.in
